fixed font-awesome icons (delete not showing up)

--- a/css/style.css
+++ b/css/style.css
@@ -23,5 +23,5 @@
 }
 
 .delete-task{
-    color: red;
+    color: #555555;
 }
